# trace-deobfuscation

./: .gitignore  README.md  pyproject.toml
docs/: trace-format-spec.md
scripts/: run.py
src/trace_deobfuscation/: __init__.py  bb_extractor.py  cfg_builder.py  cli.py  merger.py  models.py  parser.py  visualizer.py
