[project]
name = "trace-deobfuscation"
version = "0.1.0"
description = "VMP 3.9.4 trace deobfuscation — basic block merging, opaque predicate proving, indirect jump resolution"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.21",
]

[project.scripts]
trace-deobf = "trace_deobfuscation.cli:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
